--- a/src/languages/od.json
+++ b/src/languages/od.json
@@ -52,40 +52,39 @@
     "safeKey": "ଅଥେଣ୍ଟିକ କୋଡ୍",
     "copyKey": "କପି କର",
     "copySuccess": "କପି ହୋଇଛି",
-    "tipSaveKeyProperly": "Please keep the key, you will not be able to re-link the new Google Authenticator if you lose the key",
+    "tipSaveKeyProperly": "ଗୋଗଲ ଅଥେଣ୍ଟିକ କି ସମ୍ଭାଳି ରଖ",
     "bindStep": "Link Guide",
-    "tipDownloadGoogleVerify": "Download and install Google Authenticator",
+    "tipDownloadGoogleVerify": "ଗୋଗଲ ଅଥେଣ୍ଟିକ ଡୋନଲୋଡ କର",
     "downloadGoogleVerify": "Download Google Authenticator",
     "tipCopyKeyToBind": "Copy the 16-digit key to Google Authenticator to link",
     "tipAddNewAccount": "Add a new account, select the link key",
     "tipNametheAccountPasteTheKey": "Name this account for easy verification, paste the 16 digit key",
     "tipGenerateSuccessCode": "Automatically generate 6-digit verification code after successful addition",
-    "guideTitle": "Beginner's Guide",
-    "inviteFriends": "Invite friends",
-    "totalAmount": "Total amount",
-    "myMission": "My Mission",
-    "invite": "Invite",
-    "valideVIP": "Eligible member",
-    "receive": "Receive",
-    "selectLanguage": "Language",
-    "language": "English",
-    "notification": "Notification",
-    "gift": "Gift",
+    "guideTitle": "ନୂଆ ଲୋକ କୁ ଟିପ୍ପଣୀ",
+    "inviteFriends": "ସାଙ୍ଗ ଡକାନ୍ତୁ",
+    "totalAmount": "ମୋଟ ରାଶି",
+    "myMission": "ତୁମ ସୂଚୀ",
+    "invite": "ଡକାନ୍ତୁ",
+    "valideVIP": "ଯୋଗ୍ୟ ପ୍ରିୟବ୍ୟକ୍ତି",
+    "receive": "ପରିଗ୍ରହଣ",
+    "selectLanguage": "ଭାଷା",
+    "language": "ଓଡିଆ",
+    "gift": "ଉପହାର",
     "tipHelloVIP": "Hi",
-    "tipWepreparedGift4u": "We have a gift for you",
-    "tipPlsEnterRedeemCode": "Please enter the gift code below",
-    "tipPlsBindBankcard": "Please bind your bank account number first",
-    "tipPlsEnterCode": "Please enter gift code",
-    "record": "History",
-    "titleEditPsw": "Change login password",
-    "oldPSW": "Login password",
-    "newPSW": "New login password",
-    "confirmPSW": "Confirm new password",
+    "tipWepreparedGift4u": "ଉପହାର ଗ୍ରହଣ କରନ୍ତୁ",
+    "tipPlsEnterRedeemCode": "ଉପହାର ଗୁପ୍ତ ପଂକ୍ତି",
+    "tipPlsBindBankcard": "ବ୍ଯାଙ୍କ ଖାତା ବିବରଣୀ",
+    "tipPlsEnterCode": "ଉପହାର ଗୁପ୍ତ ପଂକ୍ତି",
+    "record": "ପୂର୍ବତମ ବିବରଣୀ",
+    "titleEditPsw": "ଗୁପ୍ତ ପଂକ୍ତି ପରିବର୍ତନ",
+    "oldPSW": "ଏକାଉନ୍ଟ ଗୁପ୍ତ ପଂକ୍ତି",
+    "newPSW": "ନୂଆ ଗୁପ୍ତ ପଂକ୍ତି",
+    "confirmPSW": "ଗୁପ୍ତ ପଂକ୍ତି ସୁନିଶ୍ଚିତ କରନ୍ତୁ",
     "tipUnmatchPsw": "Entered twice the password does not match!",
     "saveChanges": "Save changes",
     "tipVerifyCodeRequired": "Please enter the confirmation code!",
     "nextStep": "Next step",
-    "complete": "Complete",
+    "complete": "ସମ୍ପୂର୍ଣ",
     "changeBindPhone": "Change linked phone number",
     "loginPSW": "Login password",
     "edit": "Edit",
@@ -130,8 +129,8 @@
     "amountAvaliableInsufficient": "Insufficient amount available",
     "amountTransferedIn": "Amount transferred",
     "quantity": "Quantity",
-    "withdraw": "Withdraw",
-    "bankCard": "Bank account",
+    "withdraw": "ରାଶି ନିକାଶୀ",
+    "bankCard": "ବ୍ଯାଙ୍କ ଆକାଉଣ୍ଟ",
     "name": "Full name",
     "cashBalanceInsufficient": "Insufficient balance",
     "enterAmount": "Please enter the amount",
@@ -139,21 +138,21 @@
     "withdrawalRange": "Withdrawal range",
     "titleWithdrawalApplicationSuccess": "Withdrawal request successful",
     "tip2HoursToCompleteWithdrawal": "We will complete the withdrawal within 2 hours!",
-    "days": "Day",
-    "lastFor": "Consecutive",
-    "commissionDetails": "Commission Details",
-    "commission": "Commission",
-    "agencyGrade": "Agent level",
-    "details": "Details",
-    "totalRechargeAmount": "Total deposit amount",
-    "subordinatesNumber": "Number of subordinates",
-    "loginTime": "Login time",
-    "titleInvitationDetail": "Level",
-    "level": "Level",
-    "checkOver": "Check",
-    "titlePickUpRecord": "Receive history",
-    "titleInvitationRule": "Rules",
-    "tipPromotionPartner": "【Promotion partner】program",
+    "days": "ଦିନ",
+    "lastFor": "ଲଗାତର",
+    "commissionDetails": "ଆୟୋଗ ବବରଣୀ",
+    "commission": "ଆୟୋଗ",
+    "agencyGrade": "ସହକର୍ମୀ ସ୍ତର",
+    "details": "ବିବରଣୀ",
+    "totalRechargeAmount": "ମୋଟ ଆୟ ରାଶି",
+    "subordinatesNumber": "ଡାକିଥିବା ଲୋକ ସଂଖ୍ୟା",
+    "loginTime": "ପୂର୍ବ ଗତିବିଧି ସମୟ",
+    "titleInvitationDetail": "ସ୍ତର",
+    "level": "ସ୍ତର",
+    "checkOver": "ଯାଞ୍ଚ",
+    "titlePickUpRecord": "ଆୟ ବିବରଣୀ",
+    "titleInvitationRule": "ଡାକିବା ନିୟମ",
+    "tipPromotionPartner": "ଭାଗୀଦାରୀ କର୍ଜୟକ୍ରମ",
     "tipActivityValidForLongTime": "This activity is valid for a long time",
     "tipTop20RankingAdditionalRewords": "TOP20 commission rankings will be randomly awarded with {0} a separate bonus",
     "tipInterpretationRightSaved": "The final interpretation of this activity belongs to {0}",
@@ -162,11 +161,11 @@
     "divideBonus": "Income",
     "tip10billion": "10 billion",
     "shareInvitationPoster": "INVITATION LINK",
-    "copyInvitationLink": "Copy invitation link",
+    "copyInvitationLink": "ଡାକିବା ଲିଙ୍କ",
     "titlePromotion": "Agency",
-    "rule": "Rules",
+    "rule": "ନିୟମ",
     "betRebateAmount": "Total Commission",
-    "directGrossCommission": "This Week",
+    "directGrossCommission": "ଏହି  ସପ୍ତାହ",
     "teamGrossCommission": "Total commission",
     "recharge": "Deposit",
     "rechargeRecords": "Deposit history",
