commit language change
ok

--- a/src/languages/bra.json
+++ b/src/languages/bra.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "Número de subordinados",
     "loginTime": "hora de login",
     "titleInvitationDetail": "Nível",
-    "level": "Nível",
+    "level": "Nível :",
     "checkOver": "Verificar",
     "titlePickUpRecord": "Receber histórico",
     "titleInvitationRule": "Regras",
