--- a/src/languages/hd.json
+++ b/src/languages/hd.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "अधीनस्थों की संख्या",
     "loginTime": "लॉगिन समय",
     "titleInvitationDetail": "मेरा निमंत्रण",
-    "level": "कक्षा",
+    "level": "स्तर :",
     "checkOver": "जाँच करना",
     "titlePickUpRecord": "रिकॉर्ड उठाओ",
     "titleInvitationRule": "निमंत्रण नियम",
@@ -413,7 +413,8 @@
     "settlementIncome": "निपटान आय",
     "fundSafety": "वित्तीय सुरक्षा",
     "descTotalAssets": "24 घंटे की अनुमानित आय",
-    "yesterdayGrossCommision": "कुल कमीशन कल",
+    "yesterdayGrossCommision": "कल का कुल कमीशन",
+    "announcement": "तथ्य",
     "directSub": "सीधे नीचे",
     "team": "टीम",
     "promotionLederboard": "प्रचार लीडरबोर्ड",
