--- a/src/languages/id.json
+++ b/src/languages/id.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "Jumlah bawahan",
     "loginTime": "Waktu login",
     "titleInvitationDetail": "Tingkat",
-    "level": "Level",
+    "level": "Level :",
     "checkOver": "Memeriksa",
     "titlePickUpRecord": "Riwayat terima",
     "titleInvitationRule": "Aturan",
