--- a/src/languages/md.json
+++ b/src/languages/md.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "လက်အောက်အရေအတွက်",
     "loginTime": "ဝင်ရောက်ချိန်",
     "titleInvitationDetail": "ကျွန်ုပ်၏ဖိတ်ခေါ်",
-    "level": "အဆင့်",
+    "level": "အဆင့် :",
     "checkOver": "စစ်ဆေးပါ။",
     "titlePickUpRecord": "လက်ခံရရှိသောမှတ်တမ်း",
     "titleInvitationRule": "စည်းကမ်းများ",
