--- a/src/languages/my.json
+++ b/src/languages/my.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "Bilangan bawahan",
     "loginTime": "Masa log masuk",
     "titleInvitationDetail": "Tahap",
-    "level": "Level",
+    "level": "Level :",
     "checkOver": "Semak",
     "titlePickUpRecord": "Sejarah terima",
     "titleInvitationRule": "Peraturan",
