--- a/src/languages/od.json
+++ b/src/languages/od.json
@@ -148,7 +148,7 @@
     "subordinatesNumber": "ଡାକିଥିବା ଲୋକ ସଂଖ୍ୟା",
     "loginTime": "ପୂର୍ବ ଗତିବିଧି ସମୟ",
     "titleInvitationDetail": "ସ୍ତର",
-    "level": "ସ୍ତର",
+    "level": "ସ୍ତର :",
     "checkOver": "ଯାଞ୍ଚ",
     "titlePickUpRecord": "ଆୟ ବିବରଣୀ",
     "titleInvitationRule": "ଡାକିବା ନିୟମ",
