--- a/src/languages/pak.json
+++ b/src/languages/pak.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "ماتحتوں کی تعداد",
     "loginTime": "اگ ان کا وقت",
     "titleInvitationDetail": "سطح",
-    "level": "سطح",
+    "level": "سطح :",
     "checkOver": "چیک کریں",
     "titlePickUpRecord": "تاریخ موصول ہوئی",
     "titleInvitationRule": "قوانین",
