--- a/src/languages/rus.json
+++ b/src/languages/rus.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "Number of subordinates",
     "loginTime": "Login time",
     "titleInvitationDetail": "Level",
-    "level": "Level",
+    "level": "уровень :",
     "checkOver": "Check",
     "titlePickUpRecord": "Receive history",
     "titleInvitationRule": "Rules",
