--- a/src/languages/tha.json
+++ b/src/languages/tha.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "จำนวนผู้ใต้บังคับบัญชา",
     "loginTime": "เวลาเข้าสู่ระบบ",
     "titleInvitationDetail": "รหัสเชิญของฉัน",
-    "level": "ระดับ",
+    "level": "ระดับ :",
     "checkOver": "ตรวจสอบ",
     "titlePickUpRecord": "รับบันทึก",
     "titleInvitationRule": "กฎระเบียบการเชิญ",
