--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "Số lượng cấp dưới",
     "loginTime": "Thời gian đăng nhập",
     "titleInvitationDetail": "Lời mời của tôi",
-    "level": "Cấp",
+    "level": "Cấp :",
     "checkOver": "Kiểm tra",
     "titlePickUpRecord": "Lịch sử nhận",
     "titleInvitationRule": "Quy tắc mời",
