--- a/src/languages/zh.json
+++ b/src/languages/zh.json
@@ -149,7 +149,7 @@
     "subordinatesNumber": "下级人数",
     "loginTime": "登录时间",
     "titleInvitationDetail": "我的邀请",
-    "level": "级",
+    "level": "级 :",
     "checkOver": "查看",
     "titlePickUpRecord": "领取记录",
     "titleInvitationRule": "邀请规则",
