commit language Changes
ok

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -520,7 +520,7 @@
     "promotionRuleDesc5": "The commission percentage depends on the membership level. The higher the membership level, the higher the bonus percentage. Different game types also have different payout percentages.",
     "promotionRuleRedTXT": "The commission rate is specifically explained as follows",
     "vipGrade": "Agency Lvl",
-    "teamMembers": "Team Number",
+    "teamMembers": "Total Members",
     "teamStream": "Team Betting",
     "teamRecharge": "Team Deposit",
     "friendsGrade": "Level",
