--- a/src/languages/hd.json
+++ b/src/languages/hd.json
@@ -6,7 +6,7 @@
     "detail": "विवरण",
     "manualCharge": "मैनुअल जमा",
     "time": "समय",
-    "amount": "संतुलन",
+    "amount": "शेष राशि",
     "aboutTitle": "के बारे में",
     "pravicyProtocal": "गोपनीयता समझौता",
     "riskProtocal": "जोखिम प्रकटीकरण समझौता",
@@ -146,29 +146,30 @@
     "agencyGrade": "एजेंट स्तर",
     "details": "विवरण",
     "totalRechargeAmount": "कुल रिचार्ज राशि",
-    "subordinatesNumber": "अधीनस्थों की संख्या",
+    "subordinatesNumber": "अधीनस्थों की संख्या:",
     "loginTime": "लॉगिन समय",
     "titleInvitationDetail": "मेरा निमंत्रण",
     "level": "स्तर :",
     "checkOver": "जाँच करना",
+    "turnover": "कारोबार",
     "titlePickUpRecord": "रिकॉर्ड उठाओ",
     "titleInvitationRule": "निमंत्रण नियम",
     "tipPromotionPartner": "【प्रमोशन पार्टनर】प्रोग्राम",
-    "tipActivityValidForLongTime": "यह गतिविधि लंबे समय के लिए वैध है",
-    "tipTop20RankingAdditionalRewords": "समय-समय पर, प्रचार छूट लीडरबोर्ड में शीर्ष 20 को {0} द्वारा आधिकारिक रूप से जारी किए गए अतिरिक्त पुरस्कार प्राप्त होंगे।",
-    "tipInterpretationRightSaved": "इस गतिविधि का अंतिम व्याख्या अधिकार T{0} का है।",
+    "tipActivityValidForLongTime": "यह कार्यक्रम लंबे समय के लिए वैध है",
+    "tipTop20RankingAdditionalRewords": "TOP20 आयोग रैंकिंग को एक अलग बोनस के साथ यादृच्छिक रूप से पुरस्कृत किया जाएगा",
+    "tipInterpretationRightSaved": "इस कार्यक्रम का अंतिम व्याख्या अधिकार Cloudyscape का है।",
     "titleInvite": "आमंत्रित करना",
     "tipSwipeToPickBrochure": "अपना पसंदीदा ब्रोशर चुनने के लिए कृपया बाएं और दाएं स्वाइप करें",
     "divideBonus": "उत्कीर्ण",
     "tip10billion": "दस खरब",
     "shareInvitationPoster": "निमंत्रण पोस्टर साझा करना",
-    "copyInvitationLink": "आमंत्रण लिंक कॉपी करें",
+    "copyInvitationLink": "प्रचार लिंक कॉपी करें",
     "titlePromotion": "बढ़ावा देना",
     "rule": "नियम",
     "betRebateAmount": "कुल शर्त छूट",
     "directGrossCommission": "सप्ताह के लिए कुल कमीशन",
     "teamGrossCommission": "कुल कमीशन",
-    "recharge": "पुनर्भरण",
+    "recharge": "पुनर्भरण:",
     "rechargeRecords": "रिचार्ज रिकॉर्ड",
     "titleToBePaid": "भुगतान किया जाना है",
     "tipCompletePaymentBeforeCountdown": "उलटी गिनती समाप्त होने से पहले कृपया भुगतान पूरा करें",
@@ -420,7 +421,7 @@
     "promotionLederboard": "प्रचार लीडरबोर्ड",
     "statisticalDeadline": "सांख्यिकी की समय सीमा",
     "totalCommision": "कमीशन की राशि",
-    "totalCommisionThisWeek": "सप्ताह के लिए कुल कमीशन",
+    "totalCommisionThisWeek": "साप्ताहिक कमीशन",
     "totalCommisionDirect": "प्रत्यक्ष कुल आयोग",
     "totalCommisionTeam": "कुल टीम कमीशन",
     "quickRecharge": "त्वरित रिचार्ज",
@@ -521,13 +522,13 @@
     "promotionRuleDesc5": "प्रचार छूट अनुपात सदस्यता स्तर से संबंधित है। सदस्यता स्तर जितना अधिक होगा, छूट अनुपात उतना ही अधिक होगा। विभिन्न प्रकार के खेलों में अलग-अलग छूट होती है।",
     "promotionRuleRedTXT": "विशिष्ट प्रचार छूट अनुपात इस प्रकार है",
     "vipGrade": "सदस्यता का स्तर",
-    "teamMembers": "टीम के सदस्य",
+    "teamMembers": "टीम के सदस्य:",
     "teamStream": "टीम कुल शर्त",
     "teamRecharge": "टीम रिचार्ज",
     "friendsGrade": "दोस्तों का स्तर",
     "commissionAmount": "आयोग",
-    "copyCode": "निमंत्रण कोड कॉपी करें",
-    "myInvitation": "मेरा निमंत्रण",
+    "copyCode": "प्रचार कोड कॉपी करें",
+    "myInvitation": "मेरा निमंत्रण:",
     "teamSheets": "टीम रिपोर्ट",
     "commissionDetail": "कमीशन विवरण",
     "invitationRules": "निमंत्रण नियम",
@@ -642,7 +643,7 @@
     "minitesLong": "लंबे समय",
     "home": "मुखपृष्ठ",
     "activity": "गतिविधि",
-    "promotion": "पदोन्नति करना",
+    "promotion": "प्रचार करना",
     "chat": "बात करना",
     "wallet": "बटुआ",
     "main": "मेरा",
@@ -1228,7 +1229,7 @@
     "inviteFriendRecharge": "दोस्तों को आमंत्रित करें और रिचार्ज करें",
     "ForMissionRewards": "मिशन पुरस्कार प्राप्त करें",
     "rechargeProgress": "रिचार्ज प्रगति",
-    "addSubor": "अधीनस्थ जोड़ें",
+    "addSubor": "नया अधीनस्थ:",
     "bindUsdt": "कृपया यूएसडीटी एड्रेस को बाइंड करें",
     "withdrawalAmount": "निकासी राशि की सीमा निकासी शेष राशि से अधिक नहीं हो सकती",
     "wordWithdrawal": "एकल निकासी राशि {0}~{1} के बीच होती है",
@@ -1773,7 +1774,7 @@
     "RebateDetailTip5": "खेल कोड धुलाई दर",
     "RebateDetailTip6": "लॉटरी कोड धुलाई दर",
     "RebateDetailTip7": "शतरंज कोड धोने की दर",
-    "typingAmount": "कारोबार",
+    "typingAmount": "आज का कारोबार:",
     "googleAuthenticator": "गूगल प्रमाणक",
     "googleIllustrate": "Google प्रमाणक निर्देश",
     "googleTip1": "Google प्रमाणक Google की प्रमाणीकरण सेवा के लिए एक TOTP और HOTP दो-चरणीय सत्यापन सॉफ़्टवेयर टोकन है।",
@@ -2596,8 +2597,8 @@
     "turntableRule4": "यदि आपको मौद्रिक पुरस्कार प्राप्त होते हैं, तो आवेदन करने की कोई आवश्यकता नहीं है, सिस्टम स्वचालित रूप से उन्हें आपकी सदस्य आईडी में जोड़ देगा (भौतिक पुरस्कार प्राप्त करने के लिए कृपया ग्राहक सेवा से संपर्क करें)",
     "turntableRule5": "लॉटरी का दौर हर सुबह <span>00:00</span> शुरू होता है। अपनी जमा राशि जमा करने के बाद, आपको ड्रॉ व्हील शुरू होने से पहले 5 मिनट तक इंतजार करना होगा।",
     "turntableExample": "यदि किसी सदस्य की एकल जमा राशि उसी दिन <span>{0}</span> से अधिक हो जाती है, तो उसे <span>{1}</span> लकी ड्रा के अवसर प्राप्त होंगे। लॉटरी ड्रा उसी दिन के लिए वैध है और इसे अगले दिन तक जमा नहीं किया जा सकता है!",
-    "rebateRatio": "छूट प्रणाली  ​",
-    "rebateLevel": "छूट स्तर  ​",
+    "rebateRatio": "बट्टा मात्रा",
+    "rebateLevel": "बट्टा स्तर  ​",
     "lowerRrebate": "{0} स्तर निचले स्तर की कमीशन छूट",
     "settlementState": "निपटान सफल",
     "totalBetP": "सट्टेबाजों की कुल संख्या",
