--- a/src/languages/hd.json
+++ b/src/languages/hd.json
@@ -7,7 +7,7 @@
     "manualCharge": "मैनुअल जमा",
     "time": "समय",
     "amount": "शेष राशि",
-    "aboutTitle": "के बारे में",
+    "aboutTitle": "जानकारी",
     "pravicyProtocal": "गोपनीयता समझौता",
     "riskProtocal": "जोखिम प्रकटीकरण समझौता",
     "settled": "बसे हुए",
@@ -99,7 +99,7 @@
     "transferIn": "में स्थानांतरित",
     "tipBalanceTransferInUnits": "तिजोरी में स्थानांतरित वॉलेट शेष राशि को इकाइयों में स्थानांतरित किया जाना चाहिए",
     "tipTransferAmountMustBeMultipleOfCopies": "एक प्रति 1,000 है, 2 प्रतियाँ 2,000 हैं, 10 10,000 है, 50 50,000 है, और हस्तांतरण राशि 1,000 की गुणक होनी चाहिए",
-    "transferOut": "घर छोड़ देना",
+    "transferOut": "बाहर करें",
     "tipTransferAnytimeGuarantedUnderSolidIncomes": "इस शर्त के तहत कि आपकी आय की गारंटी है, आप किसी भी समय वॉल्ट बैलेंस से वॉलेट बैलेंस में ट्रांसफर कर सकते हैं, और ट्रांसफर की गई राशि प्रतियों की संख्या का गुणक होना चाहिए।",
     "friendlyReminds": "मित्रवत अनुस्मारक",
     "tipPlsDoNotTransferInOutFrequently": "कृपया बार-बार अंदर और बाहर न जाएं। जमा करने के {0} मिनट बाद से कमाई की गणना की जाएगी। यदि एकल आय राशि का संचयी योग 0.01 से कम है, तो इसे आय में शामिल नहीं किया जाएगा।",
@@ -122,7 +122,7 @@
     "tipNoIncomeYetWeatherTransferout": "क्या आय बाहर स्थानांतरित की जा रही है",
     "amountUnit": "प्रति कॉपी राशि",
     "amountAvaliable": "उपलब्ध राशि",
-    "amountTransferedOut": "स्थानांतरण राशि",
+    "amountTransferedOut": "स्थानांतरित राशि",
     "dailyRate": "दैनिक ब्याज दर",
     "revenue": "आय",
     "all": "सभी",
@@ -130,7 +130,7 @@
     "amountAvaliableInsufficient": "अपर्याप्त शेष राशि उपलब्ध है",
     "amountTransferedIn": "स्थानांतरण राशि",
     "quantity": "मात्रा",
-    "withdraw": "अर्थदंड",
+    "withdraw": "निकालना",
     "bankCard": "बैंक कार्ड",
     "name": "नाम",
     "cashBalanceInsufficient": "अपर्याप्त नकद शेष",
@@ -232,7 +232,7 @@
     "totalBalance": "संतुलन",
     "mainWallet": "मुख्य बटुआ",
     "thirdPartyWallet": "थर्ड पार्टी वॉलेट",
-    "oneClickRecovery": "एक-क्लिक रीसाइक्लिंग",
+    "oneClickRecovery": "बाटवा में भेजे",
     "checkInRecord": "चेक-इन रिकॉर्ड",
     "continuousCheckedIn": "निरंतर चेक-इन",
     "playRules": "खेल के नियमों",
