--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -614,7 +614,7 @@
     "trendDesc6": "Max consecutive",
     "about2start": "About to start",
     "setting": "Settings",
-    "notification": "Notification",
+    "notifiCation": "Notification",
     "wholeTimeService": "24/7 Customer service",
     "guide": "Beginner's Guide",
     "about": "About us",
