--- a/src/languages/hd.json
+++ b/src/languages/hd.json
@@ -3,6 +3,7 @@
     "pickDate": "कोई दिनांक चुनें",
     "remarksContent": "टिप्पणियां",
     "manualRecharge": "मैनुअल रिचार्ज",
+    "rechargeNow": "अभी रिचार्ज करें",
     "detail": "विवरण",
     "manualCharge": "मैनुअल जमा",
     "time": "समय",
@@ -1631,7 +1632,7 @@
     "vipTip10": "निर्वासन की शर्तों को पूरा करना [100% पूर्ण]",
     "vipTip11": "स्तर रखरखाव स्थिति पूर्ण नहीं [{0}%पूर्ण]",
     "addToDesktop": "डेस्कटॉप में जोड़ें",
-    "withdrawing": "वापस लेना",
+    "withdrawing": "पैसे लेना",
     "laundryRecord": "कोड धोने का रिकॉर्ड",
     "PromotionRuleTitle1": "पदोन्नति साथी",
     "PromotionRuleTitle2": "योजना",
@@ -2633,7 +2634,7 @@
     "gameT": "प्रवेश करने के लिए न्यूनतम रिचार्ज {0}",
     "code1006": "不符合申领此活动的要求，请联系上级代理寻求帮助",
     "sxf": "राशि सीमा <span class=red>{0}-{1}</span> निकासी शुल्क उपलब्ध है",
-    "sxf1": "निकासी शुल्क <span class=red>{0}%</span>",
+    "sxf1": "निकासी शुल्क {0}%",
     "safeNewTip": "अधिकतम कुल राजस्व",
     "safeNewTip2": "इस शर्त के तहत कि आपकी आय की गारंटी है, आप किसी भी समय तिजोरी की शेष राशि को वॉलेट शेष में स्थानांतरित कर सकते हैं।",
     "dailyRateReturn2": "आधे घंटे की ब्याज दर {0}%, कमाई की गणना हर {1} मिनट में एक बार की जाती है",
