few changes to complete
ok

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -62,7 +62,7 @@
     "tipGenerateSuccessCode": "Automatically generate 6-digit verification code after successful addition",
     "guideTitle": "Beginner's Guide",
     "inviteFriends": "Invite friends",
-    "totalAmount": "Total amount",
+    "totalAmount": "Total Balance",
     "myMission": "My Mission",
     "invite": "Invite",
     "valideVIP": "Eligible member",
@@ -2565,7 +2565,7 @@
     "platformBonus": "The platform returns <span class=number>{0}%</span> bonus",
     "registrationDepositTip": "Registered for {0} days and accumulated deposits {1}+",
     "registrationExample": "New member registration<span class=number>{0}</span> days, accumulated deposits<span class=number>{1}+</span>, valid bets<span class=number>{2}+</span>, you can apply for <span class=number>{3}</span> bonus.",
-    "depositMoney": "Total Recharge",
+    "depositMoney": "Deposit",
     "turntableCount": "Number of spins",
     "winType": "Reward type",
     "turntableWin": "prize",
