--- a/src/languages/hd.json
+++ b/src/languages/hd.json
@@ -2103,28 +2103,28 @@
     "dragonEntry": "प्रवेश करना",
     "dragonTips": "एक ही परिणाम के साथ लगातार पांच ड्रा रहे  ​",
     "topPrize": "इतिहास में सबसे अधिक बोनस",
-    "winGoRule": "प्लेटफ़ॉर्म विन गो के माध्यम से लॉटरी के परिणाम के रूप में हैश लॉटरी बीज",
-    "trxRule": "लॉटरी के परिणाम के रूप में टीआरएक्स ब्लॉकचेन का वास्तविक समय हैश मूल्य प्राप्त करके",
-    "k3Rule": "खिलाड़ी 3 DICE नंबरों की भविष्यवाणी करता है, जीतने की दर अधिक है, गेमप्ले सरल है, और जीतना आसान है",
-    "d5Rule": "लॉटरी के परिणाम के रूप में 5 नंबरों का उपयोग किया जाता है, और खेलने के तरीके लचीले और विविध होते हैं",
+    "winGoRule": "Sidra Blockchain के Block No Result प्लेटफ़ॉर्म Sidra Mine के माध्यम से Output के रूप में Generated है",
+    "trxRule": " TRX ब्लॉकचेन का Current Hash Value प्राप्त करके लॉटरी के Result के रूप में",
+    "k3Rule": "खिलाड़ी 3 DICE नंबरों की Predict करता है, जीतने की दर अधिक है, Gameplay Simple है, और जीतना आसान है",
+    "d5Rule": "लॉटरी के Result के रूप में 5 नंबरों का OUTCOME जाता है, और खेलने के तरीके flexible और variety होते हैं",
     "makeBet": "एक शर्त बना",
-    "consecutiveResults": "लगातार परिणाम",
-    "consecutiveTimes": "लगातार कई बार",
-    "winnAmount": "जीत की रकम",
+    "consecutiveResults": "लगातार Result",
+    "consecutiveTimes": "लगातार Repeat",
+    "winnAmount": "जीत की amount",
     "walletTip": "अपर्याप्त वॉलेट बैलेंस",
-    "goRecharge": "रीचार्ज करने के लिए",
-    "damanRule": "दमन मंच निष्पक्षता, न्याय और खुलेपन की वकालत करता है। हम मुख्य रूप से फेयर लॉटरी, ब्लॉकचेन गेम्स, लाइव कैसीनो और स्लॉट मशीन गेम संचालित करते हैं।",
-    "damanRule2": "दमन 10,000 से अधिक ऑनलाइन लाइव गेम डीलरों और स्लॉट गेम के साथ काम करता है, जिनमें से सभी सत्यापित निष्पक्ष गेम हैं।",
-    "damanRule3": "दमन तेजी से जमा और निकासी का समर्थन करता है, और आपकी यात्रा के लिए उत्सुक है।",
+    "goRecharge": "रीचार्ज करें",
+    "damanRule": "Cloudscape मंच निष्पक्षता, न्याय और खुलेपन की वकालत करता है। हम मुख्य रूप से फेयर लॉटरी, ब्लॉकचेन गेम्स, लाइव कैसीनो और स्लॉट मशीन गेम संचालित करते हैं।",
+    "damanRule2": "Cloudscape 10,000 से अधिक ऑनलाइन लाइव गेम डीलरों और स्लॉट गेम के साथ काम करता है, जिनमें से सभी सत्यापित निष्पक्ष गेम हैं।",
+    "damanRule3": "Cloudscape तेजी से जमा और निकासी का समर्थन करता है, और आपकी यात्रा के लिए उत्सुक है।",
     "damanWarn": "जुए की लत लग सकती है, कृपया तर्कसंगत ढंग से खेलें।",
-    "damanWarn2": "दमन केवल 18 वर्ष से अधिक आयु के ग्राहकों को स्वीकार करता है",
+    "damanWarn2": "Cloudscape केवल 18 वर्ष से अधिक आयु के ग्राहकों को स्वीकार करता है",
     "validEmailRequired": "कृपया सही ईमेल पता दर्ज करें  ​",
     "taskReward": "मिशन पुरस्कार  ​",
     "code8104": "बाध्यकारी पुरस्कार  ​",
     "code8105": "XOSO मुद्दा रद्द कर दिया गया  ​",
-    "bindEmail": "मेलबॉक्स बाइंड करें",
-    "addCardMsg6": "कृपया ईमेल पता दर्ज करें",
-    "plsEnterCorrectEmail": "कृपया अपना वैध ईमेल दर्ज करें!",
+    "bindEmail": "Email बाइंड करें",
+    "addCardMsg6": "कृपया Email पता दर्ज करें",
+    "plsEnterCorrectEmail": "कृपया अपना वैध Email दर्ज करें!",
     "otherverificationmethods": "अन्य सत्यापन विधियाँ",
     "pleaseloginphoneoremail": "कृपया अपने फ़ोन नंबर या ईमेल से लॉग इन करें  ​",
     "forgetyourpassword": "यदि आप अपना पासवर्ड भूल गए हैं, तो कृपया ग्राहक सेवा से संपर्क करें",
