--- a/src/languages/hd.json
+++ b/src/languages/hd.json
@@ -373,7 +373,7 @@
     "walletBalance": "बटुआ संतुलन",
     "electric": "बिजली",
     "earningsRankingToday": "आज की रैंकिंग आय",
-    "winningDetal": "जीतने का विवरण",
+    "winningDetal": "पुरस्कार का विवरण",
     "winningAmount": "सम्पूर्ण जीता",
     "more": "अधिक",
     "phEnter": "कृपया दर्ज करें",
